--- a/src/components/Atoms/Fields/Input/Input.pug
+++ b/src/components/Atoms/Fields/Input/Input.pug
@@ -1,6 +1,20 @@
-mixin Input(label="Поле")
+mixin Input(label="Поле", isTextarea=false, isCount=false)
     .a-input.js-input(class!=attributes.class)
         .a-input__input
             //.a-input__label=label
-            input(type="text" name!=attributes.name value!=attributes.value placeholder!=label).js-input__input
+            if isTextarea
+                textarea(
+                    type="text"
+                    name!=attributes.name
+                    value!=attributes.value
+                    placeholder!=label
+                ).js-input__input
+            else
+                input(
+                    type="text"
+                    name!=attributes.name
+                    value!=attributes.value
+                    placeholder!=label
+                    data-only-number=!!isCount
+                ).js-input__input
         .a-input__error.js-input__error Текст ошибки
