--- a/src/components/mixins.pug
+++ b/src/components/mixins.pug
@@ -10,6 +10,7 @@ include ./Wrappers/Block/Block
 include ./Wrappers/Blocks/Blocks
 include ./Wrappers/Content/Content
 include ./Wrappers/Container/Container
+include ./Wrappers/GridContainer/GridContainer
 include ./Wrappers/Grid/Grid
 include ./Wrappers/AnimatedShow/AnimatedShow
 
@@ -19,10 +20,12 @@ include ./Molecules/Question/Question
 //- Организмы
 include ./Organisms/Fscreen/Fscreen
 include ./Organisms/About/About
+include ./Organisms/Program/Program
 include ./Organisms/Location/Location
 include ./Organisms/Dress/Dress
 include ./Organisms/Registration/Registration
 include ./Organisms/Bottom/Bottom
+include ./Organisms/Video/Video
 include ./Organisms/Header/Header
 include ./Organisms/MobileMenu/MobileMenu
 include ./Organisms/Footer/Footer
@@ -33,6 +36,7 @@ include ./Organisms/Popups/Overlay/Overlay
 include ./Organisms/Popups/Base/Base
 include ./Organisms/Popups/Form/Form
 include ./Organisms/Popups/Success/Success
+include ./Organisms/Popups/Registration/Registration
 
 
 //- Компоненты для ui-kit
