--- a/src/html/pages/index.pug
+++ b/src/html/pages/index.pug
@@ -7,9 +7,21 @@ block append head
 block content
 	main.p-index
 		+Blocks
-			+About
-			+Registration
-			+Locaion
-			+Dress
-			+Bottom
-			+Label
+			+Container
+				+Fscreen
+			+Container
+				+About
+			+Container
+				+Video
+			+GridContainer
+				+Program
+			+Container
+				+Registration
+			+GridContainer
+				+Dress
+			+Container
+				+Bottom
+		//+Locaion
+		//+Dress
+		//
+		//+Label
