--- a/src/styles/utils/color.scss
+++ b/src/styles/utils/color.scss
@@ -1,15 +1,10 @@
 //======== Main colors =========//
 :root {
-    --basic-color: #111111;
+    --basic-color: #28251E;
+    --black-color: #000000;
     --white-color: #FFF;
     --white-bg-color: #ffffff;
-    --grey-color: #7588A8;
-    --grey-medium-color: #CFDBE5;
-    --grey-light-color: #DCE4EA;
-    --grey-lighter-color: #F8FAFD;
-    --primary-color: #432D1C;
-    --primary-light-color: #93806E;
-    --primary-lighter-color: #B09E92;
-    --primary-bd-color: rgba(176, 158, 146, 0.50);
+    --grey-color: #9E9B98;
+    --primary-bd-color: #423425;
     --primary-dark-color: #830101;
 }
