--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,17 +1,17 @@
 :root {
     --appHeight: 100vh;
-    --containerWidth: 1400px;
+    --containerWidth: 1155px;
     --headerHeight: 100px;
     --footerIndent: 130px;
 
     --mainFont: 'VeranoSans';
-    --additionalFont: 'Floriselscript';
+    --additionalFont: 'Prata';
 
     --basicTextSize: 18px;
     --basicLineHeight: normal;
 
     --scrollbarBg: #fff;
-    --scrollbarThumb: var(--primary-color);
+    --scrollbarThumb: #382E1B;
     --scrollbarWidth: 7px;
     --scrollbarBorder: none;
     --scrollbarBorderRadius: 0;
