--- a/src/components/Atoms/Buttons/Btn/Btn.scss
+++ b/src/components/Atoms/Buttons/Btn/Btn.scss
@@ -1,31 +1,19 @@
 .a-btn {
-    height: 45px;
     display: inline-flex;
-    padding: 12px 35px 13px;
     justify-content: center;
     align-items: center;
-    font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     cursor: pointer;
-    background-color: var(--white-bg-color);
-    color: var(--primary-lighter-color);
-    border: 1px solid var(--primary-lighter-color);
-    border-radius: 12px;
-
-    &:active {
-        background-color: var(--primary-light-color);
-        color: var(--white-bg-color);
+    
+    @media(max-width: 1023px) {
+        height: 40px;
+        padding: 12px 30px 11px;
+        font-size: 14px;
+        border-radius: 12px;
     }
-
-    @media (hover: hover) {
-
-        &:hover {
-            background-color: var(--primary-light-color);
-            color: var(--white-bg-color);
-        }
-    }
+    
 
     &:disabled,
     &.isDisabled {
@@ -35,5 +23,60 @@
 
     @media (hover: hover) {
         transition: var(--defaultTransition);
+    }
+    
+    // style
+    &--black {
+        background-color: rgba(246, 245, 241, 0.5);
+        color: var(black-color);
+        border: 1px solid var(--black-color);
+        
+        &:active {
+            background-color: var(--black-color);
+            color: var(--white-color);
+        }
+        
+        @media (hover: hover) {
+            
+            &:hover {
+                background-color: var(--black-color);
+                color: var(--white-color);
+            }
+        }
+    }
+    
+    &--grey {
+        background-color: var(--white-color);
+        color: #423425;
+        border: 1px solid #423425;
+        
+        &:active {
+            background-color: #423425;
+            color: var(--white-color);
+        }
+        
+        @media (hover: hover) {
+            
+            &:hover {
+                background-color: #423425;
+                color: var(--white-color);
+            }
+        }
+    }
+    
+    
+    // size
+    &--small {
+        height: 46px;
+        font-size: 16px;
+        padding: 13px 30px;
+        border-radius: 12px;
+    }
+    
+    &--big {
+        height: 76px;
+        padding: 23px 35px 21px;
+        font-size: 26px;
+        border-radius: 25px;
     }
 }
