--- a/src/components/Atoms/Fields/Input/Input.scss
+++ b/src/components/Atoms/Fields/Input/Input.scss
@@ -11,23 +11,32 @@
         & textarea {
             width: 100%;
             height: 45px;
-            padding: 12px 15px 13px;
-            border: 1px solid var(--primary-lighter-color);
+            padding: 11px 20px;
+            border: 1px solid #AEA89F;
             border-radius: 12px;
-            font-size: 14px;
+            font-size: 20px;
             line-height: normal;
             font-weight: 400;
-            color: var(--primary-lighter-color);
-            background-color: var(--white-bg-color);
+            color: var(--basic-color);
+            background-color: rgba(246, 245, 241, 0.5);
             transition: var(--defaultTransition);
-
+            
+            @media (max-width: 1023px) {
+                font-size: 14px;
+            }
+           
             &:focus,
             &:hover {
                 //border-color: var(--primary-color);
             }
             &::placeholder {
-                color: var(--primary-lighter-color);
+                color: #AEA89F;
             }
+        }
+        
+        & textarea {
+            height: 143px;
+            vertical-align: bottom;
         }
     }
 
