--- a/src/components/organisms/About/About.scss
+++ b/src/components/organisms/About/About.scss
@@ -1,163 +1,99 @@
 .o-about {
-    &__content {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 40px;
-        background-color: var(--white-bg-color);
-    }
-
-    &__time {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 27px;
-
-        &-items {
-            display: flex;
-            align-items: center;
-            gap: 30px;
-        }
-
-        &-item {
-            display: flex;
-            flex-direction: column;
-        }
-
-        &-count,
-        &-desc {
-            font-family: var(--additionalFont), sans-serif;
-            font-size: 34px;
-            font-style: normal;
-            line-height: 24px;
-            text-align: center;
-            color: var(--basic-color);
-        }
-    }
-
-    &__block {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 10px;
-    }
-    &__invite {
-        max-width: 305px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 15px;
-
-        &-title,
-        &-desc {
-            font-size: 18px;
-            line-height: normal;
-        }
-
-        &-title {
-            font-weight: 400;
-        }
-
-        &-desc {
-            font-weight: 300;
-            text-align: center;
-        }
-    }
-
-    &__bottom {
-        max-width: 305px;
-        position: relative;
-        display: flex;
-        flex-direction: column;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 60px;
+    
+    &__top {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr max-content 1fr;
         align-items: center;
         gap: 20px;
-        padding-top: 60px;
+        padding: 44px 0 55px;
+        border: solid var(--grey-color);
+        border-width: 2px 0;
         
-        &:before {
-            position: absolute;
-            content: "";
-            top: 0;
-            left: 50%;
-            width: 1px;
-            height: 50px;
-            background-color: var(--basic-color);
+        @media(max-width: 1023px){
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 45px 0;
+            border-width: 1px 0;
         }
-        &-text {
-            font-size: 18px;
+    }
+    
+    &__poem {
+        max-width: 405px;
+        display: flex;
+        flex-direction: column;
+        gap: 1px;
+        
+        @media(max-width: 1023px) {
+            max-width: 280px;
+           gap: 9px;
+        }
+        
+        &-title {
+            font-size: 27px;
+            font-style: normal;
+            font-weight: 400;
             line-height: normal;
-            font-weight: 300;
-            text-align: center;
-
-            & b {
-                font-weight: 400;
+            text-transform: uppercase;
+            
+            @media(max-width: 1023px) {
+                font-size: 20px;
             }
         }
-
-        &-btn {
-            color: var(--primary-light-color);
+        
+        &-place {
+            font-family: var(--additionalFont), sans-serif;
+            font-size: 22px;
+            font-style: normal;
             font-weight: 400;
+            line-height: normal;
+            
+            @media(max-width: 1023px) {
+                font-size: 14px;
+            }
         }
     }
-
-    &__wrapper {
-        position: relative;
-        height: 280px;
-        width: 100%;
-    }
-
-    &__picture {
-        position: absolute;
-        inset: 0;
-        transform: translateY(15px);
-
-        & img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            vertical-align: bottom;
+    
+    &__date {
+        font-family: var(--additionalFont), sans-serif;
+        font-size: 30px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        text-align: center;
+        
+        @media(max-width: 1023px){
+            font-size: 18px;
+            text-align: left;
         }
     }
-
-    &__left-hand {
-        position: absolute;
-        //bottom: 10%;
-        top: 127px;
-        //width: 255px;
-        width: 240px;
-        //left: -17px;
-        left: -37px;
-        //transition: transform 0.1s ease-out;
-
-        & img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            vertical-align: bottom;
+    
+    &__address {
+        font-size: 30px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        text-align: right;
+        
+        @media(max-width: 1023px) {
+            font-size: 18px;
         }
-
-        &.isBlur {
-            //filter: blur(0.6px);
-        }
-    }
-    &__right-hand {
-        position: absolute;
-        //top: 130px;
-        top: 110px;
-        //width: 180px;
-        width: 170px;
-        //right: -30px;
-        right: -45px;
-        //transition: transform 0.1s ease-out;
-
-        & img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            vertical-align: bottom;
-        }
-
-        &.isBlur {
-            //filter: blur(0.6px);
+        
+        & span {
+            font-family: var(--additionalFont), sans-serif;
+            font-size: 28px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            
+            @media(max-width: 1023px) {
+                font-size: 14px;
+            }
         }
     }
 }
