--- a/src/components/organisms/Bottom/Bottom.pug
+++ b/src/components/organisms/Bottom/Bottom.pug
@@ -1,6 +1,5 @@
 mixin Bottom()
     .o-bottom
-        .o-bottom__title Если у вас остались вопросы, <br>обращайтесь к нам
+        .o-bottom__title Если у вас остались вопросы, обращайтесь к организатору мероприятия
         .o-bottom__contacts
-            span Иосиф, <a href="tel:+799379598048">+7 (937) 959-80-48</a>
-            span Надежда, <a href="tel:+79992083109">+7 (999) 208-31-09</a>
+            span <a href="tel:+79168777559">+7 (916) 877 75-59</a>, Анастасия
