--- a/src/components/organisms/Bottom/Bottom.scss
+++ b/src/components/organisms/Bottom/Bottom.scss
@@ -2,24 +2,34 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 15px;
-    color: var(--basic-color);
-    font-size: 16px;
+    gap: 20px;
+    color: #111;
+    font-size: 27px;
     font-style: normal;
     font-weight: 400;
-    line-height: 155%;
-    padding-bottom: 30px;
+    padding-top: 40px;
+    padding-bottom: 280px;
+    border-top: 2px solid var(--grey-color);
     
-    &__title,
+    @media(max-width: 1023px) {
+        //max-width: 310px;
+        border-width: 1px;
+        font-size: 18px;
+        gap: 16px;
+        padding: 20px 16px 54px;
+        margin: 0 15px;
+    }
+    
+    &__title {
+    
+    }
+    
     &__contacts {
-        display: flex;
-        flex-direction: column;
-        gap: 5px;
-        text-align: center;
-        
-        & a {
-            color: var(--basic-color);
-            text-decoration: underline;
+        @media(max-width: 1023px) {
+            width: 100%;
+            display: flex;
+            align-items: flex-start;
+            font-size: 16px;
         }
     }
 }
