--- a/src/components/organisms/Dress/Dress.scss
+++ b/src/components/organisms/Dress/Dress.scss
@@ -1,54 +1,85 @@
 .o-dress {
-    position: relative;
-    padding: 0 0 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-
-    &:after {
-        position: absolute;
-        content: "";
-        bottom: 0;
-        width: 266px;
-        height: 1px;
-        background-color: var(--basic-color);
+    grid-column: 1/4;
+    display: grid;
+    grid-template-columns: 320fr 181fr;
+    gap: 114px;
+    
+    @media(max-width: 1023px) {
+        grid-template-columns: minmax(0, 1fr);
+        gap: 44px;
+        grid-column: 1/6;
     }
-
-    &__text {
-        max-width: 305px;
+    
+    &__picture {
+        width: 100%;
+        height: 100%;
+        
+        @media(max-width: 1023px) {
+            aspect-ratio: 75/86;
+            width: calc(100% + 10px);
+            height: auto;
+            margin: 0 -5px;
+        }
+        
+        & img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            vertical-align: bottom;
+        }
+    }
+    
+    &__right {
         display: flex;
         flex-direction: column;
-        align-items: center;
-        gap: 15px;
-        color: var(--basic-color)
+        align-items: flex-end;
+        gap: 30px;
+        
+        @media(max-width: 1023px) {
+            align-items: flex-start;
+            padding-left: 50px;
+            gap: 20px;
+            order: -1;
+        }
     }
-    &__desc {
-        font-weight: 300;
-        text-align: center;
-    }
-    &__colors {
+    
+    &__content {
         display: flex;
-        align-items: center;
-        gap: 10px;
+        flex-direction: column;
+        gap: 40px;
+        text-align: right;
+        color: var(--black-color);
+        
+        @media(max-width: 1710px) {
+            gap: 25px;
+        }
+        @media(max-width: 1023px) {
+            gap: 20px;
+            text-align: left;
+        }
     }
-    &__color {
-        width: 59px;
-        height: 73px;
-        border-top-right-radius: 100px;
-        border-top-left-radius: 100px;
-
-        &:nth-child(1) {
-            background: #E5E3E6;
+    
+    &__text {
+        font-size: 30px;
+        
+        @media(max-width: 1710px) {
+            font-size: 22px;
         }
-        &:nth-child(2) {
-            background: #C4BFAA;
+        @media(max-width: 1023px) {
+            font-size: 18px;
         }
-        &:nth-child(3) {
-            background: #6A6A47;
+    }
+    
+    &__info {
+        font-size: 27px;
+        font-weight: 300;
+        
+        @media(max-width: 1710px) {
+            font-size: 18px;
         }
-        &:nth-child(4) {
-            background: #D6BDAE;
+        @media(max-width: 1023px) {
+            font-size: 14px;
+            padding-left: 50px;
         }
     }
 }
