--- a/src/components/organisms/Fscreen/Fscreen.scss
+++ b/src/components/organisms/Fscreen/Fscreen.scss
@@ -1,36 +1,68 @@
 .o-fscreen {
-    height: 520px;
-    width: 100%;
-    max-width: 400px;
     position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-end;
-    margin: 0 auto;
-    border-radius: 0 0 10px 10px;
+    //aspect-ratio: 4/3;
+    width: 100%;
+    height: var(--appHeight, 100vh);
+    //margin: 0 auto;
     overflow: hidden;
     
+    @media(max-width: 1200px) {
+        width: calc(100% + 40px);
+        margin: 0 -20px;
+    }
     @media(max-width: 1023px) {
-        max-width: 100%;
-        border-radius: 0;
+        width: calc(100% + 30px);
+        margin: 0 -15px;
+        aspect-ratio: unset;
+        //height: var(--appHeight, 100vh);
+        //max-height: 750px;
     }
 
-    &__text {
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        padding-bottom: 20px;
-        z-index: 15;
-        color: var(--white-bg-color);
-        align-items: center;
+    &__logo {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        aspect-ratio: 101/73;
+        width: 100%;
+        height: auto;
+        max-width: 101px;
+        z-index: 10;
     }
     
-    &__title,
-    &__date {
-        font-family: var(--additionalFont), sans-serif;
-        line-height: normal;
-    }
+    //.o-fscreen__media {
+    //    position: relative;
+    //    width: 100%;
+    //    height: 100%;
+    //    overflow: hidden;
+    //}
+    //
+    //.o-fscreen__video,
+    //.o-fscreen__preview {
+    //    position: absolute;
+    //    inset: 0;
+    //    width: 100%;
+    //    height: 100%;
+    //    object-fit: cover;
+    //}
+    //
+    ///* Видео под превью */
+    //.o-fscreen__video {
+    //    z-index: 1;
+    //}
+    //
+    ///* Превью сверху */
+    //.o-fscreen__preview {
+    //    z-index: 2;
+    //    transition: opacity .4s ease;
+    //
+    //    &:global(.isHidden) {
+    //        opacity: 0;
+    //        pointer-events: none;
+    //    }
+    //}
+    
+    /* Когда видео запустилось */
     
     &__picture {
         position: absolute;
@@ -43,15 +75,57 @@
             object-fit: cover;
             vertical-align: bottom;
             object-position: top;
+            opacity: 1;
+            transition: var(--defaultTransition);
+
+            &.isHidden {
+                opacity: 0;
+                pointer-events: none;
+            }
         }
     }
-    &__blur {
+    &__video {
         position: absolute;
-        bottom: 0;
-        right: 0;
-        left: 0;
-        height: 240px;
-        background: linear-gradient(180deg, rgba(67, 45, 28, 0.00) 9.58%, #150E0E 106.1%);
+        inset: 0;
+        z-index: 2;
+
+        & video {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            opacity: 1;
+            transition: var(--defaultTransition);
+
+            &.isVisible {
+                opacity: 1;
+            }
+        }
+    }
+    
+    
+    &__arrow {
+        position: absolute;
+        bottom: 35px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 40px;
+        height: 40px;
         z-index: 10;
+        animation: 2s linear infinite alternate arrow;
+        
+        & svg {
+            width: 100%;
+            height: 100%;
+            fill: rgba(246, 245, 241, 0.7);
+        }
+    }
+}
+
+@keyframes arrow {
+    from {
+        transform: translate(-50%, 20px);
+    }
+    to {
+        transform: translate(-50%, 0);
     }
 }
