--- a/src/components/organisms/Registration/Registration.scss
+++ b/src/components/organisms/Registration/Registration.scss
@@ -1,40 +1,47 @@
 .o-registration {
-    max-width: 285px;
-    margin: 0 auto;
-
-    &__top {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    
+    @media (max-width: 1023px) {
+        gap: 17px;
+    }
+    
+    &__title {
+        color: var(--black-color);
+    }
+    
+    &__content {
+        max-width: 780px;
         display: flex;
         flex-direction: column;
-        gap: 20px;
         align-items: center;
+        gap: 40px;
+        
+        @media (max-width: 1023px) {
+            max-width: 260px;
+            gap: 14px;
+        }
     }
-
+    
     &__text {
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
-        align-items: center;
-        color: var(--basic-color);
-    }
-
-    &__desc {
+        font-size: 27px;
+        font-weight: 400;
+        color: var(--black-color);
         text-align: center;
+        
+        @media (max-width: 1023px) {
+            font-size: 16px;
+        }
     }
-
-    &__name {
-        width: 100%;
-    }
-
-    &__items {
-        margin-top: 30px;
-        display: flex;
-        flex-direction: column;
-        gap: 30px;
-    }
-
+    
     &__btn {
-        margin-top: 35px;
-        display: flex;
-        justify-content: center;
+        width: 100%;
+        max-width: 500px;
+        
+        @media (max-width: 1023px) {
+            max-width: 100%;
+        }
     }
 }
