--- a/src/html/common/layout.pug
+++ b/src/html/common/layout.pug
@@ -22,10 +22,10 @@ html(lang="ru")
             // Open Graph (OG) для соцсетей
             meta(property="og:title" content="Пригласительная на свадьбу Марка и Анастасии")
             meta(property="og:description" content="Дорогие родные и близкие! Приглашаем вас разделить радость особенного для нас события — нашей свадьбы!")
-            meta(property="og:image" content="")
+            meta(property="og:image" content="https://horevs.ru/img/preview.jpg")
             meta(property="og:image:width" content="1200")
             meta(property="og:image:height" content="630")
-            meta(property="og:url" content="")
+            meta(property="og:url" content="https://horevs.ru/")
             meta(property="og:type" content="website")
 
     body
@@ -35,7 +35,8 @@ html(lang="ru")
         block footer
             +Overlay
             +SuccessPopup
+            +RegistrationPopup
         block scripts
             <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous" defer></script>
-            script(src='/scripts/libs.min.js' defer)
+            //script(src='/scripts/libs.min.js' defer)
             script(src='/scripts/gen.min.js' defer)
