--- a/src/styles/utils/fonts.scss
+++ b/src/styles/utils/fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
-  font-family: 'Floriselscript';
-  src: url('../fonts/Floriselscript.woff2') format('woff2'),
-      url('../fonts/Floriselscript.ttf') format('truetype');
+  font-family: 'Prata';
+  src: url('../fonts/Prata-Regular.woff2') format('woff2'),
+      url('../fonts/Prata-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
