--- a/src/components/organisms/Program/Program.pug
+++ b/src/components/organisms/Program/Program.pug
@@ -1,7 +1,7 @@
 mixin Program
     .o-program
         .o-program__left
-            +Title('2').o-program__title порядок <br>церемонии венчания
+            +Title('2').o-program__title порядок <br>церемонии бракосочетания
             .o-program__items
                 .o-program__item
                     .o-program__item-title / сбор гостей
@@ -10,7 +10,7 @@ mixin Program
                     .o-program__item-title / начало церемонии
                     .o-program__item-info 11:00
                 .o-program__item
-                    .o-program__item-title / венчание
+                    .o-program__item-title / бракосочетание
                     .o-program__item-info 1 час
                 .o-program__item
                     .o-program__item-title / Поздравительная <br>и музыкальная программа
