добавил ссылку на адрес

--- a/src/components/organisms/About/About.pug
+++ b/src/components/organisms/About/About.pug
@@ -5,7 +5,7 @@ mixin About
                 .o-about__poem-title Да будет милость Твоя, Господи, над нами, как мы уповаем на Тебя
                 .o-about__poem-place Пс. 32, 22
             .o-about__date 07 / 03/ <br>2026
-            .o-about__address Москва, Вознесенский <br>переулок, д. <span>8/5</span>
+            a(href="https://yandex.ru/maps/org/anglikanskaya_tserkov_apostola_svyatogo_andreya/1760445860/?ll=37.605265%2C55.757982&z=16" target="_blank").o-about__address Москва, Вознесенский <br>переулок, д. <span>8/5</span>
 
         .o-about__poem.isHiddenDesc
             .o-about__poem-title Да будет милость Твоя, Господи, над нами, как мы уповаем на Тебя
